--- a/tor/task.tex
+++ b/tor/task.tex
@@ -144,22 +144,26 @@
         100\% к \uline{\hfill14\hfill} нед.
 
     \textbf{Задание}
-    \uline{\hfill
-        Разработать веб-приложение, позволяющее загружать и размечать наборы данных разных
-        видов для последующего использования размеченных данных в задачах машинного обучения.
-    \hfill}
-
-    \uline{\hfill 
-        Должна быть предоставлена возможность выбирать тип размечаемых данных и тип проводимой разметки. 
-    \hfill}
-
-    \uline{\hfill
-        Cреди поддерживаемых типов входных данных должны быть: текст, изображения, табличные данные(с задаваемым количеством колонок).
-    \hfill}
-
-    \uline{\hfill
-        Среди поддерживаемых типов разметки должны быть: классификация(из заданных пользователем классов), численная метка(целое, вещественное), текст, прямоугольная область(для изображений).
-    \hfill}
+    %\uline{\hfill
+     %   Используя язык программирования Golang и базу данных Tarantool разработать веб-приложение, позволяющее загружать и размечать наборы данных разных
+     %   видов для последующего использования размеченных данных в задачах машинного обучения.
+   % \hfill}
+    \uline{На основе базы данных Tarantool с использованием языка программирования Golang разработать веб-приложение, 
+    позволяющее загружать и размечать наборы данных разных видов для последующего использования размеченных данных
+    в задачах машинного обучения.        
+    Обеспечить поддержку двух видов пользователей системы:
+    1. администраторов, имеющих возможность конфигурировать тип размечаемых данных и проводимой разметки, настраивать 
+    доступ других пользователей к набору данных, принадлежащему администратору.  
+    2. обычных пользователей, имеющих возможность производить разметку наборов данных к которым пользователь имеет доступ. 
+    Наличие доступа определяется в соответствии с настройками, заданными администратором набора данных.
+    Cреди поддерживаемых типов входных данных должны быть: текст, изображения, табличные данные(с задаваемым 
+    количеством колонок).
+    Среди поддерживаемых типов разметки должны быть: классификация(из заданных пользователем классов), 
+    численная метка(целое, вещественное), текст, прямоугольная область(для изображений).
+    Предоставить возможность пользователям-администраторам загружать наборы данных для разметки, а также 
+    выгружать размеченные данные в форматах csv и json, как через веб-интерфейс, так и с помощью HTTP API для интеграции, 
+    разрабатываемого приложения, с системами машинного обучения. 
+    }
 
     {\flushleft
     \textbf{Оформление курсового проекта:}
@@ -247,9 +251,6 @@
         (И.О.Фамилия)
     \end{center}
 \end{adjustbox}
-
-\vfill
-
 \begin{flushleft}
 \uline{Примечание}: Задание оформляется в двух экземплярах: один выдается
 студенту, второй хранится на кафедре.
