--- a/tor/task.tex
+++ b/tor/task.tex
@@ -148,7 +148,7 @@
      %   Используя язык программирования Golang и базу данных Tarantool разработать веб-приложение, позволяющее загружать и размечать наборы данных разных
      %   видов для последующего использования размеченных данных в задачах машинного обучения.
    % \hfill}
-    \uline{На основе базы данных Tarantool с использованием языка программирования Golang разработать веб-приложение, 
+    \justifying{На основе базы данных Tarantool с использованием языка программирования Golang разработать веб-приложение, 
     позволяющее загружать и размечать наборы данных разных видов для последующего использования размеченных данных
     в задачах машинного обучения.        
     Обеспечить поддержку двух видов пользователей системы:
