--- a/tor/preamble.tex
+++ b/tor/preamble.tex
@@ -24,5 +24,6 @@ citecolor=black, menucolor=black, filecolor=black,
 \usepackage{blindtext}
 \usepackage{newfloat}
 \usepackage{verbatim}
+\usepackage{ragged2e}
 
 \setlength{\parskip}{0ex} 
